Fixed chat contextual. Make blinkig one time. Q.Pointer.fastclick not working for desktop, so set valid event for mobile and desktop. Also set ul.Q_listing overflow hidden to disable scrollbars during blinking.

--- a/platform/plugins/Q/web/css/contextual.css
+++ b/platform/plugins/Q/web/css/contextual.css
@@ -158,6 +158,6 @@ html.Q_contextual_shown body {
 	overflow: hidden;
 }
 .Q_contextual_pulsate {
-	animation: Q_pulsate .2s ease-in-out infinite alternate;
-	animation-iteration-count: 2;
+	animation: Q_pulsate .1s ease-in-out infinite alternate;
+	animation-iteration-count: 1;
 }
